refactor: Update character_box component styling and layout, add Character model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["anemoi", "chara", "thomasita", "tsukumin"]
+  "cSpell.words": [
+    "Aino",
+    "anemoi",
+    "chara",
+    "furigana",
+    "Hiiro",
+    "Koyomi",
+    "Rikka",
+    "thomasita",
+    "tsukumin"
+  ]
 }
