--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@mui/material": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.7",
     "hamburger-react": "^2.5.1",
+    "i18next": "^23.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
