feat: add multi languages for intro

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,23 @@
     "Aino",
     "anemoi",
     "chara",
+    "fumuyun",
     "furigana",
+    "hasama",
     "Hiiro",
+    "kimishima",
     "Koyomi",
+    "nagayama",
+    "Nakige",
+    "niijima",
+    "okano",
+    "orito",
     "Rikka",
+    "sayuki",
+    "shinji",
     "thomasita",
-    "tsukumin"
+    "touya",
+    "tsukumin",
+    "yuunon"
   ]
 }
