feat: add multi languages in story section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,12 @@
     "fumuyun",
     "furigana",
     "hasama",
+    "Hayakawa",
     "Hiiro",
     "kimishima",
     "Koyomi",
+    "Masumi",
+    "Mugi",
     "nagayama",
     "Nakige",
     "niijima",
