feat: multi languages in character box

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,13 +2,17 @@
   "cSpell.words": [
     "Aino",
     "anemoi",
+    "Awayuki",
+    "brocon",
     "chara",
     "fumuyun",
     "furigana",
+    "Fusaba",
     "hasama",
     "Hayakawa",
     "Hiiro",
     "kimishima",
+    "konpeito",
     "Koyomi",
     "Masumi",
     "Mugi",
@@ -20,6 +24,7 @@
     "Rikka",
     "sayuki",
     "shinji",
+    "Shirato",
     "thomasita",
     "touya",
     "Tsujikura",
