--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.7",
+    "fontfaceobserver": "^2.3.0",
     "hamburger-react": "^2.5.1",
     "i18next": "^23.16.0",
     "react": "^18.3.1",
@@ -33,6 +34,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/fontfaceobserver": "^2.1.3",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
