refactor: Update font references from Tsukumin to Shippori Mincho and adjust related components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,11 +24,11 @@
     "Rikka",
     "sayuki",
     "shinji",
+    "shippori",
     "Shirato",
     "thomasita",
     "touya",
     "Tsujikura",
-    "tsukumin",
     "yuunon"
   ]
 }
