fix: simplify Nginx configuration for /anemoi location handling

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,11 @@
-server {
+  server {
     listen 80;
+    charset     utf-8;  
+    root /usr/share/nginx/html;
+    include /etc/nginx/mime.types;
 
-    server_name localhost;
-
-    location /anemoi/ {
-        alias /usr/share/nginx/html/;
-        index index.html;
-        try_files $uri $uri/ /anemoi/index.html;
-    }
-
-    location /anemoi/assets/ {
-        alias /usr/share/nginx/html/assets/;
-        expires 1y;
-        add_header Cache-Control "public, must-revalidate, proxy-revalidate";
-    }
-
-    # Ensure correct MIME type for JavaScript modules
-    types {
-        application/javascript js mjs;
-        text/css css;
+    location /anemoi {
+      alias /usr/share/nginx/html/;
+      try_files $uri $uri/ /anemoi/index.html;
     }
 }
